@@ -1,4 +1,4 @@
-function s = to_ket(s)
+function s = to_ket(s, tol)
 % TO_KET  Convert state representation into a ket (if possible).
 %
 %  q = to_ket(s)
@@ -7,23 +7,26 @@ function s = to_ket(s)
 %  internal representation of the state (q.data) is guaranteed to
 %  be a ket vector.
 
-% Ville Bergholm 2009-2011
+% Ville Bergholm 2009-2017
 
 
 global qit;
+if nargin < 2
+    tol = qit.tol;
+end
 
 if is_ket(s)
   return; % already a ket, nothing to do
 else
   % state op
-  if (abs(purity(s) - 1) > qit.tol)
+  if abs(s.purity() -1) > tol
     error('The state is not pure, and thus cannot be represented using a ket vector.')
   end
   
   [v, d] = eig(s.data);
   d = real(diag(d)); % state ops are Hermitian
-  [d, I] = sort(d);
-  s.data = v(:, I(end)); % corresponds to the highest eigenvalue, i.e. 1
+  [d, ind] = sort(d);
+  s.data = v(:, ind(end)); % corresponds to the highest eigenvalue, i.e. 1
   s = fix_phase(s); % clean up global phase
 
   s.dim{2} = 1;
